--- a/mini-projetos/calculadora-IMC/index.html
+++ b/mini-projetos/calculadora-IMC/index.html
@@ -8,6 +8,8 @@
     <title>Calculadora - IMC</title>
 </head>
 <body>
+    
+    <!--initiation calculator content-->
 
     <div class="calculator-content">
         <h1>Calculadora - IMC</h1>
